2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/prop-editor.h:
	* libgnomeui/gnome-about.h:
	* libgnomeui/gnome-color-picker.h:
	* libgnomeui/gnome-dialog.h:
	* libgnomeui/gnome-entry.h:
	* libgnomeui/gnome-font-picker.h:
	* libgnomeui/gnome-icon-item.h:
	* libgnomeui/gnome-icon-list.h:
	* libgnomeui/gnome-pixmap-entry.h:
	* libgnomeui/gnome-popup-menu.h:
	* libgnomeui/gnome-scores.h:
	* libgnomeui/gnome-window-icon.h:
	* libgnomeui/gnome-window.h:
	Fix header guards.

2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c:
	(gtk_file_folder_gnome_vfs_dispose), (fs_module_init):
	* glade/glade-gnome.c:
	* libgnomeui/gnome-icon-theme.c: (gnome_icon_theme_get_type):
	* libgnomeui/gnome-stock-icons.c:
	* libgnomeui/gnome-theme-parser.c:
	Remove a bunch of unneeded trailing commas.

=========================== 2.17.92 ===========================

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

=========================== 2.17.91 ===========================

2007-01-31  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-vfs-util.c:
	(gnome_gdk_pixbuf_new_from_uri_at_scale):
	Try not to eat all memory when thumbnailing animations.
	Should close bug #345707.

2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* file-chooser/gtkfilesystemgnomevfs.c:
	(gtk_file_system_gnome_vfs_parse): Revert the patch to
	add support for using a single tilde '~' to go to $HOME
	since it caused crashes and apparently can't work anyway.

=========================== 2.17.90 ============================

2007-01-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update.
	* libgnomeui/0ChangeLog.2003: Rename ChangeLog to this to
	avoid prepare-ChangeLog.pl putting changelog entries in the wrong
	file.

2007-01-21  Chris Wilson <chris@chris-wilson.co.uk>

	Bug 398357 – Does not include $(X_CFLAGS)

	X_CFLAGS are used for testing the presence of libSM during