@@ -253,322 +253,6 @@ create_date_edit (void)
 	gtk_widget_show(app->app);
 }
 
-#if 0
-/*
- * DItemEdit
- */
-
-static void
-ditem_changed_callback(GnomeDItemEdit *dee, gpointer data)
-{
-	g_print("Changed!\n");
-	fflush(stdout);
-}
-
-static void
-ditem_icon_changed_callback(GnomeDItemEdit *dee, gpointer data)
-{
-	g_print("Icon changed!\n");
-	fflush(stdout);
-}
-
-static void
-ditem_name_changed_callback(GnomeDItemEdit *dee, gpointer data)
-{
-	g_print("Name changed!\n");
-	fflush(stdout);
-}
-
-static void
-create_ditem_edit (void)
-{
-	TestGnomeApp *app;
-	GtkWidget *notebook;
-	GtkWidget *dee;
-
-	app = create_newwin(TRUE,"testGNOME","Desktop Item Edit");
-	
-	notebook = gtk_notebook_new();
-
-	bonobo_window_set_contents (BONOBO_WINDOW (app->app), notebook);
-
-	dee = gnome_ditem_edit_new();
-	gtk_container_add (GTK_CONTAINER (notebook), dee);
-
-	gnome_ditem_edit_load_file(GNOME_DITEM_EDIT(dee),
-				   "/usr/local/share/gnome/apps/grun.desktop");
-#ifdef GNOME_ENABLE_DEBUG
-	g_print("Dialog (main): %p\n", GNOME_DITEM_EDIT(dee)->icon_dialog);
-#endif
-
-	g_signal_connect(dee, "changed",
-			 G_CALLBACK(ditem_changed_callback),
-			 NULL);
-
-	g_signal_connect(dee, "icon_changed",
-			 G_CALLBACK(ditem_icon_changed_callback),
-			 NULL);
-
-	g_signal_connect(dee, "name_changed",
-			 G_CALLBACK(ditem_name_changed_callback),
-			 NULL);
-
-#ifdef GNOME_ENABLE_DEBUG
-	g_print("Dialog (main 2): %p\n", GNOME_DITEM_EDIT(dee)->icon_dialog);
-#endif
-
-	gtk_widget_show(notebook);
-	gtk_widget_show(app->app);
-
-#ifdef GNOME_ENABLE_DEBUG
-	g_print("Dialog (main 3): %p\n", GNOME_DITEM_EDIT(dee)->icon_dialog);
-#endif
-
-}
-#endif
-/*
- * Druid
- */
-#if 0
-
-typedef struct druid_data
-{
-	GtkWidget *radio_button; /* if set, goto A, else goto b */
-	GtkWidget *target_a;
-	GtkWidget *target_b;
-} druid_data;
-
-static gboolean
-simple_druid_next_callback (GnomeDruidPage *page, GnomeDruid *druid, GnomeDruidPage *next)
-{
-	g_object_set_data (G_OBJECT (next), "back", page);
-	gnome_druid_set_page (druid,
-	                      next);
-	return TRUE;
-}
-
-static gboolean
-complex_druid_next_callback (GnomeDruidPage *page, GnomeDruid *druid, druid_data *data)
-{
-	if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (data->radio_button))) {
-		g_object_set_data (G_OBJECT (data->target_a), "back", page);
-		gnome_druid_set_page (druid,
-				      GNOME_DRUID_PAGE (data->target_a));
-	} else {
-		g_object_set_data (G_OBJECT (data->target_b), "back", page);
-		gnome_druid_set_page (druid,
-				      GNOME_DRUID_PAGE (data->target_b));
-	}
-	return TRUE;
-}
-
-static gboolean
-druid_back_callback (GnomeDruidPage *page, GnomeDruid *druid, gpointer data)
-{
-	GtkWidget *back_page = NULL;
-	back_page = g_object_get_data (G_OBJECT (page), "back");
-	if (back_page) {
-		g_object_set_data (G_OBJECT (page), "back", NULL);
-		gnome_druid_set_page (druid,
-				      GNOME_DRUID_PAGE (back_page));
-		return TRUE;
-	}
-	return FALSE;
-}
-
-/*
- *  * The Druid's control flow looks something like this:
- *   *
- *    * page_start -> page_a -> page_b -> page_d -> page_f -> page_finish
- *     *                      |          \                  /
- *      *                      |            page_e -> page_g
- *       *                       \                  /
- *        *                         page_c ----------
- *         */
-static void
-create_druid(void)
-{
-	GtkWidget *window;
-	GtkWidget *druid;
-	gchar *fname;
-	GtkWidget *page_start, *page_finish;
-	GtkWidget *page_a, *page_b, *page_c, *page_d, *page_e, *page_f, *page_g;
-	GdkPixbuf *logo = NULL;
-	GdkPixbuf *watermark = NULL;
-	GtkWidget *check_a, *check_b;
-	GSList *radio_group;
-	druid_data *data;
-
-	/* Load the images */
-	
-	/* This is a test program only run on the build system, so
-	 * it's OK to use the configuration-time GNOMEUIPIXMAPDIR from
-	 * the Makefile also on Win32.
-	 */
-	fname = g_strconcat (GNOMEUIPIXMAPDIR, "gnome-logo-icon.png", NULL);
-	if (fname)
-		/* FIXME: We must test GError */
-		logo = gdk_pixbuf_new_from_file (fname, NULL);
-	g_free (fname);
-
-#if 0
-	/* We really need a better image for this.  For now, it'll do */
-	fname = g_strconcat (GNOMEUIPIXMAPDIR, "gnome-logo-large.png", NULL);
-	if (fname)
-		/* FIXME: We must test GError */
-		watermark = gdk_pixbuf_new_from_file (fname, NULL);
-	g_free (fname);
-#endif
-
-	/* The initial stuff */
-	window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-	druid = gnome_druid_new ();
-
-	/* The druid pages. */
-	page_start = gnome_druid_page_start_new_with_vals
-			("Beginning of the DRUID",
-			 "This is a Sample DRUID\nIt will walk you through absolutely nothing. (-:\n\nIt would be nice to have a watermark on the left.",
-			 logo,
-			 watermark);
-	page_a = gnome_druid_page_standard_new_with_vals ("Page A", logo);
-	page_b = gnome_druid_page_standard_new_with_vals ("Page B", logo);
-	page_c = gnome_druid_page_standard_new_with_vals ("Page C", logo);
-	page_d = gnome_druid_page_standard_new_with_vals ("Page D", logo);
-	page_e = gnome_druid_page_standard_new_with_vals ("Page E", logo);
-	page_f = gnome_druid_page_standard_new_with_vals ("Page F", logo);
-	page_g = gnome_druid_page_standard_new_with_vals ("Page G", logo);
-	page_finish = gnome_druid_page_finish_new_with_vals
-			("End of the DRUID",
-			 "I hope you found this demo informative.  You would\nnormally put a message here letting someone know\nthat they'd successfully installed something.",
-			 logo,
-			 watermark);
-
-	/* set each one up. */
-	/* page_a */
-	data = g_new (druid_data, 1);
-	radio_group = NULL;
-	check_a = gtk_radio_button_new_with_label (NULL, "Go to page B");
-	radio_group = gtk_radio_button_group (GTK_RADIO_BUTTON (check_a));
-	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (check_a), TRUE);
-	check_b = gtk_radio_button_new_with_label (radio_group, "Go to page C");
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_a)->vbox),
-			    check_a, FALSE, FALSE, 0);
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_a)->vbox),
-			    check_b, FALSE, FALSE, 0);
-	data->radio_button = check_a;
-	data->target_a = page_b;
-	data->target_b = page_c;
-	g_signal_connect (page_a, "next",
-			  G_CALLBACK (complex_druid_next_callback),
-			  data);
-	g_signal_connect (page_a, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_b */
-	data = g_new (druid_data, 1);
-	radio_group = NULL;
-	check_a = gtk_radio_button_new_with_label (NULL, "Go to page D");
-	radio_group = gtk_radio_button_group (GTK_RADIO_BUTTON (check_a));
-	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (check_a), TRUE);
-	check_b = gtk_radio_button_new_with_label (radio_group, "Go to page E");
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_b)->vbox),
-			    check_a, FALSE, FALSE, 0);
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_b)->vbox),
-			    check_b, FALSE, FALSE, 0);
-	data->radio_button = check_a;
-	data->target_a = page_d;
-	data->target_b = page_e;
-	g_signal_connect (page_b, "next",
-			  G_CALLBACK (complex_druid_next_callback),
-			  data);
-	g_signal_connect (page_b, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_c */
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_c)->vbox),
-			    gtk_label_new ("This page will take you to page G\nYou don't have any say in the matter. (-:"),
-			    FALSE, FALSE, 0);
-	g_signal_connect (page_c, "next",
-			  G_CALLBACK (simple_druid_next_callback),
-			  page_g);
-	g_signal_connect (page_c, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_d */
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_d)->vbox),
-			    gtk_label_new ("This page will take you to page F"),
-			    FALSE, FALSE, 0);
-	g_signal_connect (page_d, "next",
-			  G_CALLBACK (simple_druid_next_callback),
-			  page_f);
-	g_signal_connect (page_d, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_e */
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_e)->vbox),
-			    gtk_label_new ("This page will take you to page G\n\nShe sells sea shells by the sea shore."),
-			    FALSE, FALSE, 0);
-	g_signal_connect (page_e, "next",
-			  G_CALLBACK (simple_druid_next_callback),
-			  page_g);
-	g_signal_connect (page_e, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_f */
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_f)->vbox),
-			    gtk_label_new ("This is a second to last page.\nIt isn't as nice as page G.\n\nClick Next to go to the last page\n"),
-			    FALSE, FALSE, 0);
-	g_signal_connect (page_f, "next",
-			  G_CALLBACK (simple_druid_next_callback),
-			  page_finish);
-	g_signal_connect (page_f, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/* page_g */
-	gtk_box_pack_start (GTK_BOX (GNOME_DRUID_PAGE_STANDARD (page_g)->vbox),
-			    gtk_label_new ("This is page G!!!!\n\nyay!!!!!!!"),
-			    FALSE, FALSE, 0);
-	g_signal_connect (page_g, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-
-	/* page_finish */
-	g_signal_connect (page_finish, "back",
-			  G_CALLBACK (druid_back_callback),
-			  NULL);
-
-	/*Tie it together */
-	gtk_container_add (GTK_CONTAINER (window), druid);
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_start));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_a));
-	gome_druid_append_page (GNOME_DRUID (druid),
-				GNOME_DRUID_PAGE (page_b));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_c));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_d));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_e));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_f));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_g));
-	gnome_druid_append_page (GNOME_DRUID (druid),
-				 GNOME_DRUID_PAGE (page_finish));
-	gnome_druid_set_page (GNOME_DRUID (druid), GNOME_DRUID_PAGE (page_start));
-	gtk_widget_show_all (window);
-}
-#endif
-
 /*
  * Entry
  */
@@ -1429,66 +1113,6 @@ create_app_helper (GtkWidget *widget, gpointer data)
 	gtk_widget_show (app);
 }
 
-/*
- * ImageEntry
- */
-#if 0
-
-static void
-create_image_entry(void)
-{
-	TestGnomeApp *app;
-	GtkWidget *entry;
-
-	app = create_newwin(TRUE,"testGNOME","Pixmap Entry");
-	entry = gnome_pixmap_entry_new (NULL, "Test", FALSE);
-	bonobo_window_set_contents(BONOBO_WINDOW(app->app),entry);
-	gtk_widget_show(entry);
-	gtk_widget_show(app->app);
-}
-#endif
-
-#if 0
-/*
- * ImageSelector
- */
-
-static void
-create_image_selector (void)
-{
-
-}
-
-/*
- * GnomePaperSelector
- */
-
-static void
-create_papersel(void)
-{
-	TestGnomeApp *app;
-	GtkWidget *papersel;
-
-	app = create_newwin(TRUE,"testGNOME","Paper Selection");
-	papersel = gnome_paper_selector_new( );
-	bonobo_window_set_contents(BONOBO_WINDOW(app->app),papersel);
-	gtk_widget_show(papersel);
-	gtk_widget_show(app->app);
-}
-
-#endif
-#if 0
-/*
- * UnitSpinner
- */
-
-static void
-create_unit_spinner (void)
-{
-
-}
-#endif
-
 static void
 create_about_box (void)
 {
@@ -1515,20 +1139,13 @@ main (int argc, char **argv)
 		  { "app window", create_app_helper },
 		  { "color picker", create_color_picker },
 		  { "date edit", create_date_edit },
-/*		{ "ditem edit", create_ditem_edit },*/
-/*		{ "druid", create_druid }, */
 		  { "entry", create_entry },
 		  { "file entry", create_file_entry },
 		  { "pixmap entry", create_pixmap_entry },
 		  { "icon entry", create_icon_entry },
-/*		{ "font selector", create_font_selector }, */
 		  { "font picker", create_font_picker },
 		  { "href", create_href },
 		  { "icon list", create_icon_list },
-/*		{ "image entry", create_image_entry }, */
-/*		{ "image selector", create_image_selector },*/
-/*		{ "paper selector", create_papersel },*/
-/*		{ "unit spinner", create_unit_spinner },*/
 		  { "about box", create_about_box }
 	  };
 	int nbuttons = sizeof (buttons) / sizeof (buttons[0]);
