@@ -1,5 +1,10 @@
 2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* test-gnome/testgnome.c: (main): Shave off
+	a bunch of #if 0'ed code.
+
+2007-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* file-chooser/prop-editor.h:
 	* libgnomeui/gnome-about.h:
 	* libgnomeui/gnome-color-picker.h:
